client/styles.css
html, body {
  overflow: hidden;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

#renderCanvas {
  position: relative;
  width: 100%;
  height: 100%;
}
#app {
  width: 100%;
  height: 100%;
  touch-action: none;
}
@font-face {
    font-family: "Crackman Font";
    src: url(./assets/crackman.ttf) format("truetype");
}

@font-face {
    font-family: "Joystix";
    src: url(./assets/joystix.ttf) format("truetype");
}

@font-face {
    font-family: "cp7";
    src: url(./assets/computer_pixel-7.ttf) format("truetype");
}

body {
  background: #FFF7D2;
  text-align: center;
}

h3{
  text-align: center;
}

li:hover {
  cursor: pointer;
  color: #FFF7D2;
}

button {
  outline: none;
}

button:hover {
  cursor: pointer;
  color: #FFF7D2;
}

button:active {
  border: none;
}

.element {
  display: inline-block;
  width: 4.5%;
  height: 100%;
  margin-left: 2px;
  margin-right: 2px;
  border-radius: 5px;
  background-color: blue;
}
.elemental {
  display: inline-block;
  width: 4.5%;
  height: 100%;
  margin-left: 2px;
  margin-right: 2px;
  border-radius: 5px;
  background-color: black;
}
.dot {
  display: inline-block;
  max-width:100%;
  max-height:100%;
  width: 4.5%;
  height: 100%;
  margin-left: 2px;
  margin-right: 2px;
  border-radius: 5px;
  background-image: url('assets/dot.png');
  background-size: contain;
  background-color: blue;
  background-repeat: no-repeat;
  background-position: center;

}
.pacman {
  display: inline-block;
  max-width:100%;
  max-height:100%;
  width: 4.5%;
  height: 100%;
  margin-left: 2px;
  margin-right: 2px;
  border-radius: 5px;
  background-image: url('/assets/pacman.png');
  background-size: contain;
  background-color: blue;
  background-repeat: no-repeat;
  background-position: center;

}
.side-bar {
  display: inline-block;
  float: right;
  height: 60%;
  width: 40%;
  background-color: blue;
  background: linear-gradient(to bottom right, rgba(56, 132, 255, 0.5), rgba(13, 49, 147, 0.2));
  color: white;
}
.default1 {
  display: inline-block;
  width: 100%;
  height: 25%;
  background-color: blue;
}
.tablerow {
  display: inline-block;
  width: 100%;
  height: 25%;
  background-color: blue;

}

.block1 {
  display: inline-block;
  width: 5.2%;
  height: 100%;
  background-color: blue;

}
.block2 {
  display: inline-block;
  width: 5.2%;
  height: 100%;
  background-color: black;

}
.block3 {
  display: inline-block;
  width: 5.2%;
  height: 100%;
  background-image: url('assets/dot.png');
  background-size: contain;
  background-color: blue;
  background-position: center;
  background-repeat: no-repeat;
}
.block4 {
  display: inline-block;
  width: 5.2%;
  height: 100%;
  background-image: url('assets/pacman.png');
  background-size: contain;
  background-color: blue;
  background-position: center;
  background-repeat: no-repeat;
}
.maze-editor {
  height: 100%;
  width: 100%;
}
.maze-editor-table {
  width: 50%;
  height: 70%;
  display: inline-block;
  float: left;
  background-color: green;
}

.maze-editor-row {
  width: 100%;
  height: 5.2%;
  display: inline-block;
  margin-bottom: 5px;
}

.button {
  display: inline-block;
  float: left;
  clear: both;
}
.legend {
  display: inline-block;
  float: center;
  background-color: yellow;
  height: 70%;
  width: 10%;
}

.legend-table {
  display: inline-block;
  float: left;
  width: 100%;
  height: 40%;
  background-color: purple;
}
.legend-table-row {
  display: inline-block;
  width: 100%;
  height: 20%;
  margin-bottom: 5px;
}
.legend-block1 {
  display: inline-block;
  border-radius: 5px;
  width: 20%;
  height: 100%;
  background-color: blue;
}
.legend-block2 {
  display: inline-block;
  border-radius: 5px;
  width: 20%;
  height: 100%;
  background-color: black;
}
.legend-empty {
  display: inline-block;
  width: 55%;
  height: 100%;
  padding: 2px;
  text-align: center;
}
.legend-block {
  display: inline-block;
  width: 55%;
  height: 100%;
  padding: 2px;
  text-align: center;
}
.legend-pellet {
  display: inline-block;
  width: 55%;
  height: 100%;
  padding: 2px;
  text-align: center;
}
.legend-block3 {
  display: inline-block;
  width: 20%;
  height: 100%;
  border-radius: 5px;
  background-image: url('assets/dot.png');
  background-size: cover;
  background-repeat: none;
  background-color: blue;
  background-position: center;
}

.maze {
  width: 100%;
  height: 100%;
  background-image: url('assets/pac4.jpg');
  background-attachment: fixed;
  background-size: cover;
  background-repeat: none;
}


/* The Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    padding-top: 100px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content */
.modal-content {
    position: relative;
    background-color: black;
    font-family: 'Quicksand';
    margin: auto;
    padding: 0;
    border: 1px solid #FFF7D2;
    width: 80%;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
    -webkit-animation-name: animatetop;
    -webkit-animation-duration: 0.4s;
    animation-name: animatetop;
    animation-duration: 0.4s;
    border-radius: 35px;
    max-width: 30%;
    color: #FFF7D2;
}

/* Add Animation */
@-webkit-keyframes animatetop {
    from {top:-300px; opacity:0}
    to {top:0; opacity:1}
}

@keyframes animatetop {
    from {top:-300px; opacity:0}
    to {top:0; opacity:1}
}

/* The Close Button */
.close {
    color: #FFF7D2;
    float: right;
    font-size: 28px;
    font-weight: bold;
    transform: translateY(-90%);
}

.close:hover,
.close:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
}
/* ... */

